--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+/* ----------------------------------------------------------------------------------- */
+/* Generales */
+/* List */
+/* Boton */
+/* Navbar */
+/* Hero General */
+/* Hero Inicio */
+/* Section */
+/* Stats */
+/* Card */
+/* Acordeon */
+/* Footer */
+/* ----------------------------------------------------------------------------------- */
 
 /* Generales */
 :root {
@@ -99,8 +112,9 @@ p {
   padding: 10px 15px;
 }
 
-
-
+.dropdown-item:focus {
+  background-color: var(--primario-color);
+}
 /* ----------------------------------------------------------------------------------- */
 
 /* Hero General */
@@ -134,7 +148,6 @@ p {
   background-position: top center;
   background-image: url("img/servicios/SERVICIOS-QSE.webp");
 }
-
 
 .hero-blogs {
   background-image: url("img/blogs/BLOG-QSE.webp");
